// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`epics/venues | error case: no network should get search for venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_SEARCH_FAILURE",
  },
]
`;

exports[`epics/venues | error case: no network should get search for venues by location 2`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_SEARCH_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get search for venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_SEARCH_FAILURE",
  },
]
`;

exports[`epics/venues should get recommended places by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get recommended places by location with custom parameter 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get recommended places near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get search for venues 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get search for venues by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get search for venues by location with intent match parameter 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get search for venues by query 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get search for venues near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;
